feat: add kratos-shop service and biz logic
